# iot-edge-v1

./: .editorconfig  .gitignore  .gitmodules  .jshintrc  CMakeLists.txt  Contributing.md  License.txt  README.md  ThirdPartyNotices.txt  azure-pipelines.yml  dependencies-test.cmake  dependencies.cmake  gatewayFunctions.cmake  global.json  index.html  iotedge-ci.yml  iotedge.yml  libnode.yml  traceability.yml  trademark.txt
bindings/: CMakeLists.txt
bindings/dotnet/: CMakeLists.txt
bindings/dotnet/devdoc/: dotnet_binding_hld.md  dotnet_binding_requirements.md  dotnet_binding_requirements_Broker.md  dotnet_binding_requirements_Message.md  dotnet_bindings_hld.md  dotnet_bindings_requirements.md  dotnet_bindings_requirements_Broker.md  dotnet_bindings_requirements_Message.md  dotnet_bindings_requirements_MessageBus.md  dotnet_bindings_requirements_hl.md
bindings/dotnet/dotnet-binding/: dotnet-binding.sln
bindings/dotnet/inc/: dotnet.h  dotnet_hl.h
bindings/dotnet/src/: dotnet.cpp  dotnet_hl.c
bindings/dotnet/tests/: CMakeLists.txt
bindings/dotnetcore/: CMakeLists.txt
bindings/dotnetcore/devdoc/: dotnet_core_binding_hld.md  dotnet_core_binding_requirements.md  dotnet_core_binding_requirements_Broker.md  dotnet_core_binding_requirements_Message.md  dotnet_core_binding_requirements_NetCoreInterop.md  modules_manager_requirements.md
bindings/dotnetcore/dotnet-core-binding/: dotnet-core-binding.sln
bindings/dotnetcore/inc/: dotnetcore.h  dotnetcore_common.h  lock.h  modules_manager.h
bindings/dotnetcore/src/: dotnetcore.cpp  modules_manager.cpp
bindings/dotnetcore/tests/: CMakeLists.txt
bindings/java/: CMakeLists.txt  README.md
bindings/java/c_src/: message_bus_proxy.c
bindings/java/devdoc/: java_binding_hld.md
bindings/java/gateway-java-binding/: pom.xml
bindings/java/inc/: Java_module_host_common.h  java_module_host.h  java_module_host_common.h  java_module_host_hl.h  java_module_host_manager.h  local_broker_proxy.h  message_bus_proxy.h
bindings/java/src/: java_module_host.c  java_module_host_hl.c  java_module_host_manager.c
bindings/java/tests/: CMakeLists.txt  real_string.c
bindings/nodejs/: CMakeLists.txt
bindings/nodejs/devdoc/: gateway-language-bindings.vsdx  modules_manager_requirements.md  node_bindings_hld.md  nodejs_binding_hld.md  nodejs_binding_requirements.md  nodejs_bindings_hl_requirements.md  nodejs_bindings_hld.md  nodejs_bindings_requirements.md
core/: CMakeLists.txt  azure_iot_gateway_sdkConfig.cmake  valgrind_suppressions.txt
core/adapters/: dynamic_library_linux.c  dynamic_library_windows.c  gb_library_linux.c  gb_library_windows.c
core/devdoc/: 2015 01 13 FGW architecture.pptx  broadcast_bus_requirements.md  broker_hld.md  control_message_requirements.md  dotnet_core_loader_requirements.md  dotnet_loader_requirements.md  dynamic_library_requirements.md  dynamic_loader_requirements.md  event_system_requirements.md  gateway_createfromjson_requirements.md  gateway_ll_requirements.md  gateway_requirements.md  message_broker_requirements.md  message_bus_hld.md  message_bus_requirements.md  message_queue_requirements.md  message_requirements.md  module.md  module_loader_requirements.md  module_loaders.md  module_loading_hld.md  node_loader_requirements.md  on-out-process-gateway-modules.md  oop_module_requirements.md  out-process-control-messages.md  outprocess_hld.md  outprocess_loader_requirements.md  outprocess_module_requirements.md  pubsub_bus_requirements.md
core/inc/: broker.h  control_message.h  dynamic_library.h  dynamic_loader.h  gateway.h  gateway_export.h  gateway_ll.h  gateway_version.h  message.h  message_bus.h  message_queue.h  module.h  module_access.h  module_config_resources.h  module_loader.h  oop_module.h
core/src/: broadcast_broker.c  broker.c  control_message.c  dynamic_loader.c  gateway.c  gateway_createfromjson.c  gateway_internal.c  gateway_internal.h  gateway_ll.c  message.c  message_bus.c  message_bus_broadcast.c  message_queue.c  module_loader.c  oop_module.c
core/tests/: CMakeLists.txt
dist_pkgs/gw/: CMakeLists.txt
modules/: CMakeLists.txt  dependencies.cmake
modules/azure_functions/: CMakeLists.txt  README.md
modules/ble/: CMakeLists.txt  README.md
modules/common/: messageproperties.h
modules/filter/: CMakeLists.txt
modules/functionshttptrigger/: CMakeLists.txt  README.md
modules/hello_world/: CMakeLists.txt  README.md
modules/httprestapi/: CMakeLists.txt
modules/identitymap/: CMakeLists.txt  README.md
modules/iothub/: CMakeLists.txt  README.md
modules/iothubdeviceping/: CMakeLists.txt  README.md
modules/iothubhttp/: CMakeLists.txt  README.md
modules/logger/: CMakeLists.txt  README.md
modules/simulated_device/: CMakeLists.txt  README.md
proxy/modules/: CMakeLists.txt
samples/: CMakeLists.txt
samples/azure_functions_sample/: CMakeLists.txt  README.md
samples/ble_gateway/: CMakeLists.txt  README.md  connecting_to_ble_device_on_rpi3.md
samples/ble_gateway_hl/: CMakeLists.txt
samples/callbacks_sample/: CMakeLists.txt
samples/device_ping/: CMakeLists.txt  README.md
samples/dotnet_binding_sample/: CMakeLists.txt  README.md
samples/dotnet_core_binding_sample/: CMakeLists.txt  README.md
samples/dotnet_core_dynamic_add_module/: Program.cs  links.json  module2_lin.json
samples/dotnet_core_managed_gateway/: Program.cs  README.md
samples/dotnet_core_module_sample/: CMakeLists.txt  README.md
samples/dynamically_add_module_sample/: CMakeLists.txt  README.md
samples/events_sample/: CMakeLists.txt
samples/functions_integration_sample/: CMakeLists.txt
samples/hello_world/: CMakeLists.txt  README.md
samples/httprestapi_sample/: CMakeLists.txt
samples/java_sample/: CMakeLists.txt  README.md  java_devbox_setup.md
samples/native_module_host_sample/: CMakeLists.txt  README.md
samples/nodejs_remote_sample/: README.md  package.json
samples/nodejs_simple_sample/: CMakeLists.txt  README.md
samples/proxy_sample/: CMakeLists.txt  README.md
samples/simulated_device_cloud_upload/: CMakeLists.txt  README.md
samples/uwp/: README.md  UwpSample.sln
(+1415 files in other folders)
